--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
           <h4 class="section-sub-head">Learn Anytime Anywhere!</h4>
         </div>
         <div class="row">
-          <div class="col-md-8  col-lg-4 gap">
+          <div class="col-sm col-md-6  col-lg-4 gap">
             <div class="card rounded learning-card">
               <img src="images/national-digital-library.png" class="card-img-top" alt="platform-1">
               <div class="card-body">
@@ -286,7 +286,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-8  col-lg-4 gap">
+          <div class="col-sm col-md-6  col-lg-4 gap">
             <div class="card rounded learning-card">
               <img src="images/swayam.jpg" class="card-img-top" alt="platform-2">
               <div class="card-body">
@@ -298,7 +298,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-8  col-lg-4 gap">
+          <div class="col-sm col-md-6  col-lg-4 gap">
             <div class="card rounded learning-card">
               <img src="images/nptel.png" class="card-img-top" alt="platform-3">
               <div class="card-body">
