Online Learning fixes

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <!-- Small Navigation -->
     <nav class="navbar navbar-expand-md fixed-top" id="small-nav">
       <div class="nav-1">
-        <a class="navbar-brand" href="#">Kumaun University</a>
+        <a class="navbar-brand" href="#">Fictional University</a>
         <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
           <li class="nav-item">
             <button type="button" id="menu-btn">
@@ -273,40 +273,42 @@
           <h4 class="section-sub-head">Learn Anytime Anywhere!</h4>
         </div>
         <div class="row">
-          <div class="col-sm col-md-6  col-lg-4 gap">
+          <div class="col-sm-4 col-lg-4 gap">
             <div class="card rounded learning-card">
+              <a href="https://ndl.iitkgp.ac.in" >
               <img src="images/national-digital-library.png" class="card-img-top" alt="platform-1">
+              </a>
               <div class="card-body">
-                <h6>National Digital Library</h6>
+                <h6><a href="https://ndl.iitkgp.ac.in" >National Digital Library</a></h6>
                 <small class="card-text">
-                  The National Digital library of India (NDLI) is a project under Ministry of Human Resource Development, India.
-                  The objective is to col-smlect and col-smlate metadata and provide full text index from several national and international digital libraries, as well as other relevant sources
+                  Provide full text index from several national and international digital Libraries
                 </small>
-                <button type="button" class="btn mx-auto d-block more-btn"><a href="https://ndl.iitkgp.ac.in" class="link-btn">Start</a></button>
               </div>
             </div>
           </div>
-          <div class="col-sm col-md-6  col-lg-4 gap">
+          <div class="col-sm-4 col-lg-4 gap">
             <div class="card rounded learning-card">
-              <img src="images/swayam.jpg" class="card-img-top" alt="platform-2">
+              <a href="https://swayam.gov.in/">
+                <img src="images/swayam.jpg" class="card-img-top" alt="platform-2">
+              </a>
               <div class="card-body">
-                <h6>SWAYAM</h6>
+                <h6><a href="https://swayam.gov.in/">SWAYAM</a></h6>
                 <small class="card-text">
-                  SWAYAM is a programme initiated by Government of India and designed to achieve the three cardinal principles of Education Policy viz., access, equity and quality. The objective of this effort is to take the best teaching learning resources to all, including the most disadvantaged. SWAYAM seeks to bridge the digital divide for students who have hitherto remained untouched by the digital revolution and have not been able to join the mainstream of the knowledge economy.
+                  SWAYAM designed to achieve the three cardinal principles of Education Policy viz., access, equity and quality.
                 </small>
-                <button type="button" class="btn mx-auto d-block more-btn"><a href="https://swayam.gov.in/" class="link-btn">Start</a></button>
               </div>
             </div>
           </div>
-          <div class="col-sm col-md-6  col-lg-4 gap">
+          <div class="col-sm-4 col-lg-4 gap">
             <div class="card rounded learning-card">
+              <a href="https://nptel.ac.in">
               <img src="images/nptel.png" class="card-img-top" alt="platform-3">
+              </a>
               <div class="card-body">
-                <h6>NPTEL</h6>
+                <h6><a href="https://nptel.ac.in">NPTEL</a></h6>
                 <small class="card-text">
-                  The National Programme on Technology Enhanced Learning (NPTEL) was initiated by seven Indian Institutes of Technology (Bombay, Delhi, Kanpur, Kharagpur, Madras, Guwahati and Roorkee) along with the Indian Institute of Science, Bangalore in 2003. Five core disciplines were identified, namely, civil engineering, computer science and engineering, electrical engineering, electronics and communication engineering and mechanical engineering and 235 courses in web/video format were developed in this phase.
+                   The National Programme on Technology Enhanced Learning (NPTEL) was initiated by seven Indian Institutes of Technology
                 </small>
-                <button type="button" class="btn mx-auto d-block more-btn"><a href="https://nptel.ac.in" class="link-btn">Start</a></button>
               </div>
             </div>
           </div>
