image changes and nav fixed

--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/university-1.jpg" class="w-100" alt="Kumaun University Image">
+            <img src="images/university_0.jpg" class="w-100" alt="University Image 1">
           </div>
           <div class="carousel-item">
-            <img src="images/university-2.jpg" class="w-100" alt="Kumaun University Image">
+            <img src="images/university_1.jpg" class="w-100" alt="University Image 2">
           </div>
           <div class="carousel-item">
-            <img src="images/university-3.jpg" class="w-100" alt="Kumaun University Image">
+            <img src="images/university_2.jpg" class="w-100" alt="University Image 3">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -139,9 +139,9 @@
         <div class="row">
           <div class="col-6 col-sm-3 col-md-3 col-lg-3 gap">
             <div class="card rounded person-card key-person-img">
-              <img src="images/person-1.png" class="card-img-top" alt="Tarun Bisht">
+              <img src="images/person-1.png" class="card-img-top" alt="Alan Turing">
               <div class="card-body">
-                <a class="card-title">Tarun Bisht</a>
+                <a class="card-title">Alan Turing</a>
                 <br>
                 <small class="card-text">
                   Dean, Fictional University
@@ -151,9 +151,9 @@
           </div>
           <div class="col-6 col-sm-3 col-md-3 col-lg-3 gap">
             <div class="card rounded person-card">
-              <img src="images/person-1.png" class="card-img-top key-person-img" alt="Arun Bisht">
+              <img src="images/person-1.png" class="card-img-top key-person-img" alt="Albert Einstein">
               <div class="card-body">
-                <a class="card-title">Arun Bisht</a>
+                <a class="card-title">Albert Einstein</a>
                 <br>
                 <small class="card-text">
                   Director, Fictional University
@@ -163,9 +163,9 @@
           </div>
           <div class="col-6 col-sm-3 col-md-3 col-lg-3 gap">
             <div class="card rounded person-card">
-              <img src="images/person-1.png" class="card-img-top key-person-img" alt="Vaibhav Pandey">
+              <img src="images/person-1.png" class="card-img-top key-person-img" alt="John Bell">
               <div class="card-body">
-                <a class="card-title">Vaibhav Pandey</a>
+                <a class="card-title">John Bell</a>
                 <br>
                 <small class="card-text">
                   Manager, Fictional University
@@ -175,9 +175,9 @@
           </div>
           <div class="col-6 col-sm-3 col-md-3 col-lg-3 gap">
             <div class="card rounded person-card">
-              <img src="images/person-1.png" class="card-img-top key-person-img" alt="Vidhi Pandey">
+              <img src="images/person-1.png" class="card-img-top key-person-img" alt="Alisa Hawkins">
               <div class="card-body">
-                <a class="card-title">Vidhi Pandey</a>
+                <a class="card-title">Alisa Hawkins</a>
                 <br>
                 <small class="card-text">
                   Principal, Fictional University
@@ -455,7 +455,7 @@
      <footer class="footer-panel">
         <div class="container-fluid clearfix">
           <div class="row">
-            <center class="col-md">Infinite Loop, Copyright © 2019 All rights reserved.
+            <center class="col-md">Fictional University, Copyright © 2019 All rights reserved.
             </center>
             <center class="col-md"><i class="fas fa-heart" style="color:white"></i> Hand-crafted & made in India
                 <i class="fas fa-heart" style="color:white"></i>
